# scaraplate

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  Makefile.inc  README.md  RELEASE.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  automation.rst  conf.py  gitremotes.rst  index.rst  strategies.rst  template.rst
src/scaraplate/: __init__.py  __main__.py  compat.py  config.py  cookiecutter.py  fields.py  gitremotes.py  parsers.py  rollup.py  strategies.py  template.py
src/scaraplate/automation/: __init__.py  base.py  git.py  gitlab.py
tests/: conftest.py  test_cli.py  test_config.py  test_cookecutter.py  test_gitremotes.py  test_metadata.py  test_rollup.py  test_strategies.py  test_template.py
tests/automation/: conftest.py  test_git.py  test_git_wrapper.py  test_gitlab.py
tests/strategies/: conftest.py  test_config_parser_merge.yml  test_config_parser_merge_pylintrc.yml  test_detect_newline.py  test_groovy_template_hash.yml  test_if_missing.yml  test_if_new_project.yml  test_ignore.yml  test_no_extra_keys_schema.yml  test_overwrite.yml  test_pylintrc_merge.yml  test_python_template_hash.yml  test_rendered_template_file_hash.yml  test_setupcfg_merge.yml  test_sorted_unique_lines.yml  test_template_hash.yml
