[aliases]
test = pytest

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abc.abstractproperty
    CancelledError
    NotImplementedError
    pragma: no cover
    __repr__
    __str__
fail_under = 98
precision = 2
show_missing = True

[coverage:run]
branch = True
source =
    src
    tests

[flake8]
ignore = E203,W503
max-line-length = 88

[isort]
atomic = true
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = true
indent = '    '
known_first_party = scaraplate
known_third_party =
line_length = 88
lines_after_imports = 2
multi_line_output = 3
not_skip = __init__.py
order_by_type = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses = True

[metadata]
author = Usermodel @ Rambler&Co
author_email = um@rambler-co.ru
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
description = Scaraplate is a wrapper around cookiecutter which allows to repeatedly rollup project templates onto concrete projects.
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Kostya Esmukov
maintainer_email = kostya@esmukov.ru
name = scaraplate
project_urls =
    CI: Travis = https://travis-ci.org/rambler-digital-solutions/scaraplate
    Docs = https://scaraplate.readthedocs.io/
    Issue Tracker = https://github.com/rambler-digital-solutions/scaraplate/issues
    Source Code = https://github.com/rambler-digital-solutions/scaraplate
url = https://github.com/rambler-digital-solutions/scaraplate
version =

[mypy]
check_untyped_defs = True

[mypy-cookiecutter.*]
ignore_missing_imports = True

[mypy-gitlab.*]
ignore_missing_imports = True

[mypy-marshmallow.*]
ignore_missing_imports = True

[mypy-packaging.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    click>=6,<8
    cookiecutter>=1.6,<2
    jinja2>=2.7,<3
    marshmallow>=2.15,<3
    packaging
    pyyaml>=4.2b1,<6
    setuptools
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    scaraplate = scaraplate.__main__:main

[options.extras_require]
develop =
    black==19.3b0
    coverage==4.5.4
    flake8==3.7.8
    isort==4.3.21
    mypy==0.740
    pylint==2.4.2
    pytest==5.2.1
    sphinx==2.2.0
    sphinx-rtd-theme==0.4.3
gitlab =
    python-gitlab>=1.6.0,<2

[options.packages.find]
where = src

[tool:cookiecutter_context]
_template = new-python-project
coverage_fail_under = 98
metadata_author = Usermodel @ Rambler&Co
metadata_author_email = um@rambler-co.ru
metadata_description = Scaraplate is a wrapper around cookiecutter which allows to repeatedly rollup project templates onto concrete projects.
metadata_long_description = file: README.md
metadata_name = scaraplate
metadata_url = https://github.com/rambler-digital-solutions/scaraplate
mypy_enabled = 1
project_dest = scaraplate
project_monorepo_name =
python_package = scaraplate

[tool:pytest]
addopts =
    -ra
    --junitxml=junit.xml
    --showlocals
    --verbose
