[aliases]
test = pytest

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abc.abstractproperty
    CancelledError
    NotImplementedError
    pragma: no cover
    __repr__
    __str__
fail_under = 98
precision = 2
show_missing = True

[coverage:run]
branch = True
source =
    src
    tests

[flake8]
ignore = E203,W503
max-line-length = 88

[isort]
multi_line_output = 3
profile = black

[metadata]
author = Usermodel @ Rambler&Co
author_email = um@rambler-co.ru
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
description = Scaraplate is a wrapper around cookiecutter which allows to repeatedly rollup project templates onto concrete projects.
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Kostya Esmukov
maintainer_email = kostya@esmukov.net
name = scaraplate
project_urls =
    Docs = https://scaraplate.readthedocs.io/
    Issue Tracker = https://github.com/rambler-digital-solutions/scaraplate/issues
    Source Code = https://github.com/rambler-digital-solutions/scaraplate
url = https://github.com/rambler-digital-solutions/scaraplate
version =

[mypy]
check_untyped_defs = True

[mypy-cookiecutter.*]
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    click>=6
    cookiecutter>=1.6,<3
    jinja2>=2.7,<4
    marshmallow>=2.15,<4
    packaging
    pyyaml>=3
    setuptools
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    scaraplate = scaraplate.__main__:main

[options.extras_require]
develop =
    black==22.10.0
    coverage==6.5.0
    flake8==5.0.4
    isort==5.10.1
    mypy==0.990
    pylint==2.15.5
    pytest==7.2.0
    sphinx-rtd-theme==1.1.1
    sphinx==4.3.2
    types-PyYAML
    types-setuptools
gitlab =
    python-gitlab>=1.6.0,<4

[options.packages.find]
where = src

[tool:cookiecutter_context]
_template = new-python-project
coverage_fail_under = 98
metadata_author = Usermodel @ Rambler&Co
metadata_author_email = um@rambler-co.ru
metadata_description = Scaraplate is a wrapper around cookiecutter which allows to repeatedly rollup project templates onto concrete projects.
metadata_long_description = file: README.md
metadata_name = scaraplate
metadata_url = https://github.com/rambler-digital-solutions/scaraplate
mypy_enabled = 1
project_dest = scaraplate
project_monorepo_name =
python_package = scaraplate

[tool:pytest]
addopts =
    -ra
    --junitxml=junit.xml
    --showlocals
    --verbose
